--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ollama Chat</title>
     <link rel="stylesheet" href="style.css">
-    <!-- Prism.js pour la coloration syntaxique -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism-tomorrow.min.css" rel="stylesheet" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-core.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/plugins/autoloader/prism-autoloader.min.js"></script>
-    <!-- Marked pour le Markdown -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/9.1.2/marked.min.js"></script>
-    <!-- DOMPurify pour la sécurité -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.5/purify.min.js"></script>
+    <!-- Prism.js pour la coloration syntaxique - LOCAL -->
+    <link href="lib/prism/prism-tomorrow.css" rel="stylesheet" />
+    <script src="lib/prism/prism-core.js"></script>
+    <!-- Composants Prism pour différents langages -->
+    <script src="lib/prism/prism-markup.js"></script>
+    <script src="lib/prism/prism-css.js"></script>
+    <script src="lib/prism/prism-javascript.js"></script>
+    <script src="lib/prism/prism-python.js"></script>
+    <script src="lib/prism/prism-json.js"></script>
+    <script src="lib/prism/prism-markdown.js"></script>
+    <script src="lib/prism/prism-sql.js"></script>
+    <script src="lib/prism/prism-java.js"></script>
+    <script src="lib/prism/prism-c.js"></script>
+    <script src="lib/prism/prism-cpp.js"></script>
+    <script src="lib/prism/prism-php.js"></script>
+    <script src="lib/prism/prism-ruby.js"></script>
+    <script src="lib/prism/prism-go.js"></script>
+    <script src="lib/prism/prism-rust.js"></script>
+    <script src="lib/prism/prism-typescript.js"></script>
+    <script src="lib/prism/prism-jsx.js"></script>
+    <script src="lib/prism/prism-tsx.js"></script>
+    <!-- Marked pour le Markdown - LOCAL -->
+    <script src="lib/marked.min.js"></script>
+    <!-- DOMPurify pour la sécurité - LOCAL -->
+    <script src="lib/purify.min.js"></script>
 </head>
 <body class="dark-theme">
     <!-- Bouton pour rouvrir la sidebar -->
@@ -63,12 +80,23 @@
             <div class="loading" id="loading">Generating a response</div>
 
             <div class="input-area">
+                <!-- Zone d'affichage des fichiers sélectionnés -->
+                <div class="file-preview" id="filePreview"></div>
+                
                 <div class="input-container">
-                    <textarea 
-                        id="promptInput" 
-                        placeholder="Write your message..."
-                        rows="1"></textarea>
-                    <button class="send-btn" id="sendBtn">➤</button>
+                    <div class="input-wrapper">
+                        <textarea 
+                            id="promptInput" 
+                            placeholder="Write your message..."
+                            rows="1"></textarea>
+                        <div class="input-actions">
+                            <!-- Input file caché -->
+                            <input type="file" id="fileInput" multiple accept=".txt,.md,.js,.py,.json,.csv,.html,.css,.xml,.c,.cpp,.java,.php,.rb,.go,.rs,.swift,.kt,.ts,.jsx,.tsx,.vue,.svelte" style="display: none;">
+                            <!-- Bouton d'attachement de fichiers -->
+                            <button class="file-btn" id="fileBtn" title="Attach files">📎</button>
+                            <button class="send-btn" id="sendBtn">➤</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
